log
Sun, May 18, 2025  6:05:45 PM: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|5
total_score: 0/70
3f0e54c
Sun, May 18, 2025  6:06:10 PM: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
 tests:  2|4
total_score: 15/70
b108ca3
Sun, May 18, 2025  6:08:56 PM: 
 sudoku.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:27: error: expected ';' before ':' token
     for(fila = 0; fila < 9: fila++)
                           ^
sudoku.c:70:7: error: expected ',' or ';' before 'if'
       if(numero != 0)
       ^~
sudoku.c:69:11: error: unused variable 'numero' [-Werror=unused-variable]
       int numero = n->sudo[fila][columna]
           ^~~~~~
sudoku.c:66:9: error: unused variable 'revisados' [-Werror=unused-variable]
     int revisados[10] = {0};
         ^~~~~~~~~
sudoku.c:48:10: error: unused variable 'j' [-Werror=unused-variable]
   int i, j ;
          ^
sudoku.c:48:7: error: unused variable 'i' [-Werror=unused-variable]
   int i, j ;
       ^
cc1.exe: all warnings being treated as errors
9a14937
Sun, May 18, 2025  6:09:06 PM: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:66:27: error: expected ';' before ':' token
     for(fila = 0; fila < 9: fila++)
                           ^
sudoku.c:69:7: error: expected ',' or ';' before 'if'
       if(numero != 0)
       ^~
sudoku.c:68:11: error: unused variable 'numero' [-Werror=unused-variable]
       int numero = n->sudo[fila][columna]
           ^~~~~~
sudoku.c:65:9: error: unused variable 'revisados' [-Werror=unused-variable]
     int revisados[10] = {0};
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
084abc7
Sun, May 18, 2025  6:09:31 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:66:27: error: expected ';' before ':' token
     for(fila = 0; fila < 9: fila++)
                           ^
sudoku.c:69:7: error: expected ',' or ';' before 'if'
       if(numero != 0)
       ^~
sudoku.c:68:11: error: unused variable 'numero' [-Werror=unused-variable]
       int numero = n->sudo[fila][columna]
           ^~~~~~
sudoku.c:65:9: error: unused variable 'revisados' [-Werror=unused-variable]
     int revisados[10] = {0};
         ^~~~~~~~~
cc1.exe: all warnings being treated as errors
24de529
